Use new mechanism to disable plugin
Updated readme

--- a/plugins/phpbb-rule-exclusions-before.conf
+++ b/plugins/phpbb-rule-exclusions-before.conf
@@ -16,6 +16,10 @@
 # Documentation can be found here:
 # https://github.com/coreruleset/phpbb-rule-exclusions-plugin
 
+# Generic rule to disable plugin
+SecRule TX:phpbb-rule-exclusions-plugin_enabled "@eq 0" "id:9512099,phase:1,pass,nolog,ctl:ruleRemoveById=9512100-9512999"
+
+
 # Login
 SecRule REQUEST_FILENAME "@endsWith /ucp.php" \
     "id:9512100,\
