--- a/plugins/phpbb-rule-exclusions-before.conf
+++ b/plugins/phpbb-rule-exclusions-before.conf
@@ -112,7 +112,9 @@ SecRule REQUEST_FILENAME "@endsWith /posting.php" \
             ctl:ruleRemoveTargetByTag=attack-injection-php;ARGS:subject,\
             ctl:ruleRemoveTargetByTag=attack-sqli;ARGS:subject,\
             ctl:ruleRemoveTargetByTag=attack-injection-php;ARGS:subject_checked,\
-            ctl:ruleRemoveTargetByTag=attack-sqli;ARGS:subject_checked"
+            ctl:ruleRemoveTargetByTag=attack-sqli;ARGS:subject_checked,\
+            ctl:ruleRemoveTargetById=933210;ARGS:attachment_data[0][real_filename],\
+            ctl:ruleRemoveTargetById=933210;ARGS:real_filename"
 
 # Creating and editing posts
 # Rule 200004 (phase 2) was triggered when ARGS 'subject' or
