--- a/plugins/phpbb-rule-exclusions-before.conf
+++ b/plugins/phpbb-rule-exclusions-before.conf
@@ -111,8 +111,10 @@ SecRule REQUEST_FILENAME "@endsWith /posting.php" \
             ctl:ruleRemoveTargetByTag=OWASP_CRS;ARGS:message,\
             ctl:ruleRemoveTargetByTag=attack-injection-php;ARGS:subject,\
             ctl:ruleRemoveTargetByTag=attack-sqli;ARGS:subject,\
+            ctl:ruleRemoveTargetById=932130;ARGS:subject,\
             ctl:ruleRemoveTargetByTag=attack-injection-php;ARGS:subject_checked,\
             ctl:ruleRemoveTargetByTag=attack-sqli;ARGS:subject_checked,\
+            ctl:ruleRemoveTargetById=932130;ARGS:subject_checked,\
             ctl:ruleRemoveTargetById=933210;ARGS:attachment_data[0][real_filename],\
             ctl:ruleRemoveTargetById=933210;ARGS:real_filename"
 
