Adding support for Tapatalk Plugin

--- a/plugins/phpbb-rule-exclusions-before.conf
+++ b/plugins/phpbb-rule-exclusions-before.conf
@@ -254,3 +254,16 @@ SecRule REQUEST_FILENAME "@endsWith /adm/index.php" \
             ctl:ruleRemoveTargetById=941160;ARGS:bbcode_tpl,\
             ctl:ruleRemoveTargetById=941180;ARGS:bbcode_tpl,\
             ctl:ruleRemoveTargetById=942230;ARGS:bbcode_tpl"
+
+# Tapatalk Plugin
+SecRule REQUEST_FILENAME "@endsWith /mobiquo/mobiquo.php" \
+    "id:9512220,\
+    phase:2,\
+    pass,\
+    t:none,\
+    nolog,\
+    ver:'phpbb-rule-exclusions-plugin/1.0.0',\
+    chain"
+    SecRule REQUEST_HEADERS:Content-Type "@beginsWith text/xml;" \
+        "t:none,\
+        ctl:ruleRemoveTargetById=921110;XML"
