--- a/plugins/phpbb-rule-exclusions-before.conf
+++ b/plugins/phpbb-rule-exclusions-before.conf
@@ -108,6 +108,7 @@ SecRule REQUEST_FILENAME "@endsWith /posting.php" \
         chain"
         SecRule &ARGS:mode "@eq 1" \
             "t:none,\
+            ctl:ruleRemoveTargetById=921110;REQUEST_BODY,\
             ctl:ruleRemoveTargetByTag=OWASP_CRS;ARGS:message,\
             ctl:ruleRemoveTargetByTag=attack-injection-php;ARGS:subject,\
             ctl:ruleRemoveTargetByTag=attack-sqli;ARGS:subject,\
