--- a/tests/regression/phpbb-plugin/9512100.yaml
+++ b/tests/regression/phpbb-plugin/9512100.yaml
@@ -1,6 +1,6 @@
 ---
 meta:
-  author: "Felipe Zipitria"
+  author: "Felipe Zipitria, azurit"
   description: "phpbb Plugin"
   enabled: true
   name: 9512100.yaml
