chore: migrate to new test format

--- a/tests/regression/phpbb-plugin/9512100.yaml
+++ b/tests/regression/phpbb-plugin/9512100.yaml
@@ -3,23 +3,23 @@ meta:
   author: "Felipe Zipitria, azurit"
   description: "phpbb Plugin"
   enabled: true
-  name: 9512100.yaml
+  rule_id: 9512100
 tests:
-  - test_title: 9512100-1
+  - test_id: 1
     desc: phpbb plugin login
     stages:
-      - stage:
-          input:
-            dest_addr: 127.0.0.1
-            headers:
-              Host: localhost
-              User-Agent: "OWASP CRS test agent"
-              Accept: text/xml,application/xml,application/xhtml+xml,text/html;q=0.9,text/plain;q=0.8,image/png,*/*;q=0.5
-            port: 80
-            method: POST
-            version: HTTP/1.1
-            uri: /post/ucp.php?mode=login
-            data: |
-              redirect=https://localhost
-          output:
-            no_log_contains: id "930100"
+      - input:
+          dest_addr: 127.0.0.1
+          headers:
+            Host: localhost
+            User-Agent: "OWASP CRS test agent"
+            Accept: text/xml,application/xml,application/xhtml+xml,text/html;q=0.9,text/plain;q=0.8,image/png,*/*;q=0.5
+          port: 80
+          method: POST
+          version: HTTP/1.1
+          uri: /post/ucp.php?mode=login
+          data: |
+            redirect=https://localhost
+        output:
+          log:
+            no_expect_ids: [930100]
